fix the soapbox person directory slow search issue and results alignments

--- a/app/stylesheets/soapbox/_css/soapbox.scss
+++ b/app/stylesheets/soapbox/_css/soapbox.scss
@@ -629,7 +629,7 @@ body,html,#container,#main,#content,#inside{
 	}
 	.identity {
 		width: 183px;
-    min-height: 62px;
+    min-height: 93px;
 		float: left;
 		margin: 0 15px 10px 0;
 		border-bottom: 1px dotted #ddd;
